last tweaks, removed unused images

--- a/about.html
+++ b/about.html
@@ -7,6 +7,16 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="css/styles.css">
+  <style>
+      .about-title {
+      font-size: 2.5rem;
+      font-weight: 700;
+      color: #d4af37;
+      text-align: center;
+      margin-top: 2rem;
+      margin-bottom: 1.5rem;
+    }
+  </style>
 </head>
 <body>
   <div class="sticky-top">
@@ -65,7 +75,7 @@
     <section class="about">
       <div class="row">
         <div class="col-lg-12 text-center mb-5">
-          <h1 class="display-4 about-title">O Podjetju</h1>
+          <h1 class="about-title">O Podjetju</h1>
         </div>
         <div class="col-lg-12 mb-4">
           <div class="feature-box d-flex align-items-center p-4">
@@ -164,6 +174,7 @@
           </div>
         </div>
       </div>
+      <!--
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="about-contact-title h4 mb-4">Kontaktirajte Nas</h2>
@@ -172,7 +183,7 @@
           <a href="contact.html" class="btn btn-secondary" style="border-radius: 5px; margin-top: 10px;">Kontaktirajte nas</a>
         </div>
       </div>
-    </section>
+    </section>-->
   </main>
 
 
