--- a/cialde.html
+++ b/cialde.html
@@ -22,6 +22,15 @@ html, body {
 .hero{ background: url('../images/cialde/IMG_0177.jpg') no-repeat center center/cover;
    }
 
+   .about-title {
+      font-size: 2.5rem;
+      font-weight: 700;
+      color: #d4af37;
+      text-align: center;
+      margin-top: 2rem;
+      margin-bottom: 1.5rem;
+    }
+
 </style>
 </head>
 
@@ -79,6 +88,7 @@ html, body {
     </nav>
   </div>
 
+  <main>
     <section class="hero">
       <div class="hero-content">
         <h1>Odkrijte Naše Kavne Blazinice</h1>
@@ -140,41 +150,43 @@ html, body {
             </div>
           </div>
         </section>
-      
-  <footer class="bg-dark text-white text-center py-4">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 text-left">
-          <h4 class="footer-title">Hitre Povezave</h4>
-          <ul class="footer-links">
-            <li><a href="index.html" class="footer-link">Domov</a></li>
-            <li><a href="about.html" class="footer-link">O Nas</a></li>
-            <li><a href="products.html" class="footer-link">Izdelki</a></li>
-            <li><a href="cialde.html" class="footer-link">Cialde</a></li>
-            <li><a href="contact.html" class="footer-link">Kontakt</a></li>
-          </ul>
-        </div>
-        <div class="col-md-6 text-left contact-info">
-          <h4 class="footer-title about-contact-title">Kontaktirajte Nas</h4>
-          <p><i class="fas fa-map-marker-alt mr-2"></i>Pavel Peroša s.p., Vršnik 5, 2201 Zgornja Kungota, Slovenija</p>
-          <p><i class="fas fa-phone-alt mr-2"></i>Telefonska številka: +386 40 568 073</p>
-          <p><i class="fas fa-envelope mr-2"></i>E-pošta: <a href="mailto:pavelperosa@gmail.com"
-              class="footer-link-mail">pavelperosa@gmail.com</a></p>
-        </div>
-      </div>
-      <div class="row mt-3">
-        <div class="col-md-12 text-center">
-          <div class="social-icons">
-            <a href="#" class="mr-3"><i class="fab fa-facebook fa-2x"></i></a>
-            <a href="#" class="mr-3"><i class="fab fa-twitter fa-2x"></i></a>
-            <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+
+</section>
+</main>      
+        <footer class="bg-dark text-white text-center py-4">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-6 text-left">
+                <h4 class="footer-title">Hitre Povezave</h4>
+                <ul class="footer-links">
+                  <li><a href="index.html" class="footer-link">Domov</a></li>
+                  <li><a href="about.html" class="footer-link">O Nas</a></li>
+                  <li><a href="products.html" class="footer-link">Izdelki</a></li>
+                  <li><a href="cialde.html" class="footer-link">Cialde</a></li>
+                  <li><a href="contact.html" class="footer-link">Kontakt</a></li>
+                </ul>
+              </div>
+              <div class="col-md-6 text-left contact-info">
+                <h4 class="footer-title about-contact-title">Kontaktirajte Nas</h4>
+                <p><i class="fas fa-map-marker-alt mr-2"></i>Pavel Peroša s.p., Vršnik 5, 2201 Zgornja Kungota, Slovenija</p>
+                <p><i class="fas fa-phone-alt mr-2"></i>Telefonska številka: +386 40 568 073</p>
+                <p><i class="fas fa-envelope mr-2"></i>E-pošta: <a href="mailto:pavelperosa@gmail.com"
+                    class="footer-link-mail">pavelperosa@gmail.com</a></p>
+              </div>
+            </div>
+            <div class="row mt-3">
+              <div class="col-md-12 text-center">
+                <div class="social-icons">
+                  <a href="#" class="mr-3"><i class="fab fa-facebook fa-2x"></i></a>
+                  <a href="#" class="mr-3"><i class="fab fa-twitter fa-2x"></i></a>
+                  <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-    </div>
-    <p class="mt-3 footer-credits">&copy; 2024 Peroša. Vse pravice pridržane.</p>
-    <a href="splosni-pogoji.html" class="footer-a">Pogoji poslovanja</a>
-  </footer>
+          <p class="mt-3 footer-credits">&copy; 2024 Peroša. Vse pravice pridržane.</p>
+          <a href="splosni-pogoji.html" class="footer-a">Pogoji poslovanja</a>
+        </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
